--- a/readme
+++ b/readme
@@ -1,6 +1,3 @@
-1.研究问题类型是车间调度问题
-2.案例为Lei提出，在case_def下
-3.求解问题是动态模糊柔性车间调度问题，包含调度的动态性，新任务的动态添加及执行的中断等
-4.采用果蝇算法求解
-5.求解结果放在datalei下
-6.com.ffjsp 为算法程序
+1.研究问题类型是多技能资源受限项目调度问题
+2.实现文章2017-Teaching–learning-based optimization algorithm for multi-skill RCPSP的算法 将求解目标改成了双目标
+3.试验案例case_def下
